overflowing scroll reveal fixed

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 
 /* html, body {
@@ -58,6 +58,7 @@ body {
 .sidebar {
   top: 0;
   right: 0;
+  overflow-x: hidden;
   position: fixed;
   height: 100vh;
   width: 15.625rem;
@@ -206,6 +207,7 @@ a:hover {
 
 .advantages {
   /* margin: 30vw 0; */
+  margin: 10vh 0;
   padding: 25px;
 }
 
@@ -403,13 +405,16 @@ a:hover {
   font-size: 1.2rem;
 }
 
-/* .footer-socials a:hover {
-  color: #f04;
-} */
-
 .footer p {
   font-size: 0.9rem;
   opacity: 0.7;
+}
+
+/* Global Image and Video Styles */
+img, video {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 
